--- a/irHub/irHub.csproj
+++ b/irHub/irHub.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
       <PackageReference Include="HandyControls" Version="3.5.3" />
       <PackageReference Include="Material.Icons.WPF" Version="2.1.10" />
+      <PackageReference Include="MaterialDesignColors" Version="3.1.1-ci795" />
       <PackageReference Include="MaterialDesignThemes.Wpf" Version="1.0.1" />
       <PackageReference Include="System.Drawing.Common" Version="9.0.0-preview.6.24327.6" />
       <PackageReference Include="Velopack" Version="0.0.942" />
