Added SeriLog package

--- a/irHub/irHub.csproj
+++ b/irHub/irHub.csproj
@@ -18,6 +18,7 @@
       <PackageReference Include="Material.Icons.WPF" Version="2.1.10" />
       <PackageReference Include="MaterialDesignColors" Version="3.1.1-ci795" />
       <PackageReference Include="MaterialDesignThemes.Wpf" Version="1.0.1" />
+      <PackageReference Include="Serilog" Version="4.2.0-dev-02330" />
       <PackageReference Include="System.Drawing.Common" Version="9.0.0-preview.6.24327.6" />
       <PackageReference Include="Velopack" Version="0.0.942" />
     </ItemGroup>
