Added garagecover html page as an embedded resource and code to retrieve it at runtime. Automatically creates the file if it doesn't exist.

--- a/irHub/irHub.csproj
+++ b/irHub/irHub.csproj
@@ -49,6 +49,8 @@
       <None Remove="Resources\iRacingLogo.png" />
       <None Remove="Resources\iRacingLogoWhite.png" />
       <Resource Include="Resources\iRacingLogoWhite.png" />
+      <None Remove="Resources\garagecover.html" />
+      <EmbeddedResource Include="Resources\garagecover.html" />
     </ItemGroup>
 
     <ItemGroup>
