--- a/irHub/irHub.csproj
+++ b/irHub/irHub.csproj
@@ -15,13 +15,16 @@
 
     <ItemGroup>
       <PackageReference Include="HandyControls" Version="3.5.3" />
+      <PackageReference Include="Markdig" Version="0.40.0" />
       <PackageReference Include="Material.Icons.WPF" Version="2.1.10" />
       <PackageReference Include="MaterialDesignColors" Version="3.1.1-ci795" />
       <PackageReference Include="MaterialDesignThemes.Wpf" Version="1.0.1" />
+      <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3079-prerelease" />
       <PackageReference Include="Serilog" Version="4.2.0-dev-02330" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
       <PackageReference Include="System.Drawing.Common" Version="9.0.0-preview.6.24327.6" />
+      <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
       <PackageReference Include="Velopack" Version="0.0.942" />
     </ItemGroup>
 
