--- a/irHub/irHub.csproj
+++ b/irHub/irHub.csproj
@@ -24,7 +24,7 @@
       <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
       <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
-      <PackageReference Include="Velopack" Version="0.0.942" />
+      <PackageReference Include="Ulid" Version="1.3.4" />
       <PackageReference Include="Velopack" Version="0.0.1053" />
     </ItemGroup>
 
@@ -40,6 +40,7 @@
         <SubType>Designer</SubType>
       </Page>
       <Page Update="Pages\SettingsPage.xaml">
+      <Page Update="Dialogs\UpdateDialog.xaml">
         <Generator>MSBuild:Compile</Generator>
         <XamlRuntime>Wpf</XamlRuntime>
         <SubType>Designer</SubType>
