Fixed csproj issue

--- a/irHub/irHub.csproj
+++ b/irHub/irHub.csproj
@@ -40,6 +40,10 @@
         <SubType>Designer</SubType>
       </Page>
       <Page Update="Pages\SettingsPage.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
       <Page Update="Dialogs\UpdateDialog.xaml">
         <Generator>MSBuild:Compile</Generator>
         <XamlRuntime>Wpf</XamlRuntime>
