--- a/irHub/irHub.csproj
+++ b/irHub/irHub.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="HandyControls" Version="3.5.3" />
+      <PackageReference Include="IRSDKSharper" Version="1.1.4" />
       <PackageReference Include="Markdig" Version="0.40.0" />
       <PackageReference Include="Material.Icons.WPF" Version="2.2.0" />
       <PackageReference Include="MaterialDesignColors" Version="5.2.2-ci893" />
